--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Диалог с поддержкой</title>
+    <title>Поддержка клиентов</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" />
     <style>
         :root {
@@ -30,40 +30,40 @@
             min-height: 100vh;
             display: flex;
             justify-content: center;
-            align-items: center;
-            padding: 20px 12px;
+            align-items: flex-start;
+            padding: 28px 12px;
         }
 
         main {
-            width: min(720px, 100%);
+            width: min(800px, 100%);
             background: var(--card-bg);
-            border-radius: 18px;
-            box-shadow: 0 18px 42px rgba(16, 24, 40, 0.12);
+            border-radius: 20px;
+            box-shadow: 0 20px 48px rgba(16, 24, 40, 0.12);
             display: flex;
             flex-direction: column;
             overflow: hidden;
         }
 
         header {
-            padding: 20px 24px;
+            padding: 24px 28px 22px;
             border-bottom: 1px solid var(--border);
         }
 
         header h1 {
             margin: 0;
-            font-size: 22px;
+            font-size: 24px;
             font-weight: 600;
         }
 
         header p {
-            margin: 6px 0 0;
+            margin: 8px 0 0;
             color: var(--text-muted);
             font-size: 14px;
         }
 
         #messages {
             flex: 1;
-            padding: 24px;
+            padding: 26px;
             display: flex;
             flex-direction: column;
             gap: 14px;
@@ -106,7 +106,7 @@
 
         form {
             border-top: 1px solid var(--border);
-            padding: 20px 24px;
+            padding: 22px 26px;
             display: flex;
             gap: 12px;
         }
@@ -120,7 +120,7 @@
             font-family: inherit;
             font-size: 15px;
             transition: border 0.2s ease, box-shadow 0.2s ease;
-            min-height: 54px;
+            min-height: 58px;
         }
 
         textarea:focus {
@@ -135,7 +135,7 @@
             font-weight: 600;
             border: none;
             border-radius: 12px;
-            padding: 0 24px;
+            padding: 0 26px;
             cursor: pointer;
             transition: background 0.2s ease, transform 0.1s ease;
             min-width: 120px;
@@ -154,24 +154,99 @@
         }
 
         #status {
-            padding: 12px 24px;
+            padding: 14px 26px;
             border-top: 1px solid var(--border);
             font-size: 13px;
             color: var(--text-muted);
-            background: rgba(24, 119, 242, 0.04);
+            background: rgba(24, 119, 242, 0.05);
+        }
+
+        .analytics {
+            border-top: 1px solid var(--border);
+            padding: 26px;
+            background: #f8f9ff;
+        }
+
+        .analytics h2 {
+            margin: 0 0 16px;
+            font-size: 18px;
+            font-weight: 600;
+        }
+
+        .analytics-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
+            gap: 18px;
+        }
+
+        .analytics-card {
+            background: var(--card-bg);
+            border-radius: 16px;
+            padding: 18px;
+            border: 1px solid rgba(24, 119, 242, 0.12);
+            box-shadow: 0 10px 24px rgba(15, 23, 42, 0.08);
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+            min-height: 120px;
+        }
+
+        .analytics-card h3 {
+            margin: 0;
+            font-size: 15px;
+            font-weight: 600;
+            color: var(--text-primary);
+        }
+
+        .analytics-value {
+            font-size: 28px;
+            font-weight: 700;
+            color: var(--primary);
+        }
+
+        .analytics-meta {
+            font-size: 13px;
+            color: var(--text-muted);
+        }
+
+        @media (max-width: 600px) {
+            body {
+                padding: 18px 10px;
+            }
+
+            main {
+                border-radius: 16px;
+            }
+
+            header {
+                padding: 20px;
+            }
+
+            form {
+                flex-direction: column;
+            }
+
+            button {
+                width: 100%;
+                min-height: 44px;
+            }
+
+            .analytics {
+                padding: 22px;
+            }
         }
     </style>
 </head>
 <body>
     <main>
         <header>
-            <h1>Поддержка</h1>
-            <p>Задайте вопрос — мы найдём ответ автоматически</p>
+            <h1>Служба поддержки</h1>
+            <p>Задайте вопрос — оператор ответит в ближайшее время</p>
         </header>
 
         <section id="messages" aria-live="polite">
             <div class="bubble bot">
-                Здравствуйте! Чем могу помочь?
+                Привет! Чем могу помочь?
                 <div class="meta">
                     <span>Система</span>
                 </div>
@@ -181,14 +256,35 @@
         <form id="message-form" autocomplete="off">
             <textarea
                 id="message-input"
-                placeholder="Опишите ваш вопрос"
+                placeholder="Опишите проблему..."
                 required
                 minlength="1"
             ></textarea>
             <button type="submit" id="send-button">Отправить</button>
         </form>
 
-        <div id="status">История синхронизируется…</div>
+        <div id="status">Готов к приёму сообщений</div>
+
+        <section class="analytics" aria-live="polite">
+            <h2>Аналитика классификации</h2>
+            <div class="analytics-grid">
+                <article class="analytics-card">
+                    <h3>Шаблонные ответы</h3>
+                    <div class="analytics-value" id="templateAccuracyValue">–</div>
+                    <div class="analytics-meta" id="templateAccuracyMeta">0 / 0</div>
+                </article>
+                <article class="analytics-card">
+                    <h3>Основные категории</h3>
+                    <div class="analytics-value" id="mainAccuracyValue">–</div>
+                    <div class="analytics-meta" id="mainAccuracyMeta">0 / 0</div>
+                </article>
+                <article class="analytics-card">
+                    <h3>Подкатегории</h3>
+                    <div class="analytics-value" id="subAccuracyValue">–</div>
+                    <div class="analytics-meta" id="subAccuracyMeta">0 / 0</div>
+                </article>
+            </div>
+        </section>
     </main>
 
     <script type="module" src="./app.js"></script>
