--- a/frontend/index_clean.html
+++ b/frontend/index_clean.html
@@ -518,8 +518,8 @@
             background: var(--color-chat-bg);
             border-radius: var(--radius-base);
             border: 1px solid var(--color-border-light);
-            min-height: 200px;
-            max-height: 300px;
+            min-height: 360px;
+            max-height: 520px;
             display: flex;
             flex-direction: column;
             gap: var(--space-8);
@@ -753,7 +753,7 @@
             }
 
             .chat-history {
-                max-height: 200px;
+                max-height: 220px;
             }
 
             .message-text {
@@ -833,13 +833,47 @@
                     <!-- Right Panel -->
 <!-- Right Panel -->
                     <div class="right-panel">
+                        <!-- Template Response -->
+                        <div class="panel-section">
+                            <h3 class="section-title">Шаблон ответа</h3>
+                            <div class="form-group">
+                                <div class="template-question" style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
+                                    <span>Подходит этот шаблон?</span>
+                                    <div class="template-buttons" style="display: flex; gap: var(--space-4);">
+                                        <button class="choice-btn" id="templateYes">Да</button>
+                                        <button class="choice-btn" id="templateNo">Нет</button>
+                                    </div>
+                                </div>
+                                <textarea 
+                                    id="responseTemplate" 
+                                    class="form-control medium" 
+                                    placeholder="Ответ шаблона появится после обработки запроса..."
+                                ></textarea>
+                            </div>
+                            <div class="btn-group">
+                                <button class="btn btn-secondary" id="spellCheck">Проверить орфографию</button>
+                                <button class="btn btn-primary" id="sendResponse">Отправить ответ</button>
+                            </div>
+                        </div>
+
+                        <!-- Similar Questions -->
+                        <div class="panel-section">
+                            <h3 class="section-title">Топ-3 похожих вопроса из базы</h3>
+                            <ul class="similar-questions" id="results">
+                                <li class="similar-question">
+                                    <div class="question-title">Выберите запрос слева для поиска похожих вопросов</div>
+                                    <div class="question-category">Начните ввод запроса клиента</div>
+                                </li>
+                            </ul>
+                        </div>
+
                         <!-- Classification -->
                         <div class="panel-section" id="classify">
                             <div class="panel-header">
                                 <h3 class="section-title">Классификация запроса</h3>
                                 <button class="btn btn-secondary" id="processRequest">Классифицировать</button>
                             </div>
-<div class="form-group">
+                            <div class="form-group">
                                 <label class="form-label">Основная категория:</label>
                                 <div class="classification-row">
                                     <div id="mainCategory" class="classification-display">Не определено</div>
@@ -858,40 +892,6 @@
                                         <button class="choice-btn" id="subCategoryNo">Неверно</button>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-
-                        <!-- Similar Questions -->
-                        <div class="panel-section">
-                            <h3 class="section-title">Топ-3 похожих вопроса из базы</h3>
-                            <ul class="similar-questions" id="results">
-                                <li class="similar-question">
-                                    <div class="question-title">Выберите запрос слева для поиска похожих вопросов</div>
-                                    <div class="question-category">Начните ввод запроса клиента</div>
-                                </li>
-                            </ul>
-                        </div>
-
-                        <!-- Template Response -->
-                        <div class="panel-section">
-                            <h3 class="section-title">Шаблон ответа</h3>
-                            <div class="form-group">
-                                <div class="template-question" style="display: flex; align-items: center; gap: 15px; margin-bottom: 10px;">
-                                    <span>Подходит этот шаблон?</span>
-                                    <div class="template-buttons" style="display: flex; gap: var(--space-4);">
-                                        <button class="choice-btn" id="templateYes">Да</button>
-                                        <button class="choice-btn" id="templateNo">Нет</button>
-                                    </div>
-                                </div>
-                                <textarea 
-                                    id="responseTemplate" 
-                                    class="form-control medium" 
-                                    placeholder="Шаблон ответа появится после выбора похожего вопроса..."
-                                ></textarea>
-                            </div>
-                            <div class="btn-group">
-                                <button class="btn btn-secondary" id="spellCheck">Исправить орфографию</button>
-                                <button class="btn btn-primary" id="sendResponse">Отправить ответ</button>
                             </div>
                         </div>
                     </div>
@@ -940,33 +940,41 @@
                 <h2 class="section-title" style="margin-bottom: var(--space-24);">Общая аналитика системы</h2>
                 <div class="analytics-grid" id="stats">
                     <div class="metric-card">
-                        <div class="metric-value" id="totalRequests">15,847</div>
-                        <div class="metric-label">Всего запросов</div>
+                        <div class="metric-value" id="totalRequests">0</div>
+                        <div class="metric-label">Total requests</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-value" id="todayRequests">247 <span style="color: var(--color-success); font-size: var(--font-size-sm);">+12%</span></div>
-                        <div class="metric-label">Запросы сегодня</div>
+                        <div class="metric-value" id="todayRequests">0</div>
+                        <div class="metric-label">Requests today</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-value" id="autoResolved">189 <span style="color: var(--color-success); font-size: var(--font-size-sm);">+8%</span></div>
-                        <div class="metric-label">Решено автоматически</div>
+                        <div class="metric-value" id="autoResolved">0</div>
+                        <div class="metric-label">Auto resolved</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-value" id="answerAccuracy">94.8% <span style="color: var(--color-success); font-size: var(--font-size-sm);">+2.1%</span></div>
-                        <div class="metric-label">Точность ответов</div>
+                        <div class="metric-value" id="answerAccuracy">0%</div>
+                        <div class="metric-label">Answer accuracy</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-value" id="clientRating">4.7 <span style="color: var(--color-success); font-size: var(--font-size-sm);">+0.3</span></div>
-                        <div class="metric-label">Оценка клиента</div>
+                        <div class="metric-value" id="clientRating">0%</div>
+                        <div class="metric-label">Client rating</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-value" id="mainCategoryAccuracy">93.8% <span style="color: var(--color-success); font-size: var(--font-size-sm);">+1.2%</span></div>
-                        <div class="metric-label">Точность Основная категория</div>
+                        <div class="metric-value" id="templateClassificationAccuracy">0%</div>
+                        <div class="metric-label">Template classification accuracy</div>
+                        <div class="metric-label" id="templateClassificationTotals" style="font-size: var(--font-size-sm); opacity: 0.7;">0 / 0</div>
                     </div>
                     <div class="metric-card">
-                        <div class="metric-value" id="subCategoryAccuracy">92.5% <span style="color: var(--color-success); font-size: var(--font-size-sm);">+0.8%</span></div>
-                        <div class="metric-label">Точность Подкатегория</div>
+                        <div class="metric-value" id="mainCategoryAccuracy">0%</div>
+                        <div class="metric-label">Main category accuracy</div>
+                        <div class="metric-label" id="mainCategoryTotals" style="font-size: var(--font-size-sm); opacity: 0.7;">0 / 0</div>
                     </div>
+                    <div class="metric-card">
+                        <div class="metric-value" id="subCategoryAccuracy">0%</div>
+                        <div class="metric-label">Subcategory accuracy</div>
+                        <div class="metric-label" id="subCategoryTotals" style="font-size: var(--font-size-sm); opacity: 0.7;">0 / 0</div>
+                    </div>
+                </div>
                 </div>
             </div>
         </main>
