Перенёс изменения из main в Geshka-main2

--- a/frontend/client/index.html
+++ b/frontend/client/index.html
@@ -161,54 +161,6 @@
             background: rgba(24, 119, 242, 0.05);
         }
 
-        .analytics {
-            border-top: 1px solid var(--border);
-            padding: 26px;
-            background: #f8f9ff;
-        }
-
-        .analytics h2 {
-            margin: 0 0 16px;
-            font-size: 18px;
-            font-weight: 600;
-        }
-
-        .analytics-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(190px, 1fr));
-            gap: 18px;
-        }
-
-        .analytics-card {
-            background: var(--card-bg);
-            border-radius: 16px;
-            padding: 18px;
-            border: 1px solid rgba(24, 119, 242, 0.12);
-            box-shadow: 0 10px 24px rgba(15, 23, 42, 0.08);
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-            min-height: 120px;
-        }
-
-        .analytics-card h3 {
-            margin: 0;
-            font-size: 15px;
-            font-weight: 600;
-            color: var(--text-primary);
-        }
-
-        .analytics-value {
-            font-size: 28px;
-            font-weight: 700;
-            color: var(--primary);
-        }
-
-        .analytics-meta {
-            font-size: 13px;
-            color: var(--text-muted);
-        }
-
         @media (max-width: 600px) {
             body {
                 padding: 18px 10px;
@@ -231,9 +183,6 @@
                 min-height: 44px;
             }
 
-            .analytics {
-                padding: 22px;
-            }
         }
     </style>
 </head>
@@ -256,7 +205,7 @@
         <form id="message-form" autocomplete="off">
             <textarea
                 id="message-input"
-                placeholder="Опишите проблему..."
+                placeholder="Напишите сообщение..."
                 required
                 minlength="1"
             ></textarea>
@@ -264,27 +213,6 @@
         </form>
 
         <div id="status">Готов к приёму сообщений</div>
-
-        <section class="analytics" aria-live="polite">
-            <h2>Аналитика классификации</h2>
-            <div class="analytics-grid">
-                <article class="analytics-card">
-                    <h3>Шаблонные ответы</h3>
-                    <div class="analytics-value" id="templateAccuracyValue">–</div>
-                    <div class="analytics-meta" id="templateAccuracyMeta">0 / 0</div>
-                </article>
-                <article class="analytics-card">
-                    <h3>Основные категории</h3>
-                    <div class="analytics-value" id="mainAccuracyValue">–</div>
-                    <div class="analytics-meta" id="mainAccuracyMeta">0 / 0</div>
-                </article>
-                <article class="analytics-card">
-                    <h3>Подкатегории</h3>
-                    <div class="analytics-value" id="subAccuracyValue">–</div>
-                    <div class="analytics-meta" id="subAccuracyMeta">0 / 0</div>
-                </article>
-            </div>
-        </section>
     </main>
 
     <script type="module" src="./app.js"></script>
