--- a/frontend/index_clean.html
+++ b/frontend/index_clean.html
@@ -912,10 +912,10 @@
 
                         <!-- Similar Questions -->
                         <div class="panel-section">
-                            <h3 class="section-title">Топ-3 похожих вопроса из базы</h3>
+                            <h3 class="section-title">Рекомендованные ответы</h3>
                             <ul class="similar-questions" id="results">
                                 <li class="similar-question">
-                                    <div class="question-title">Выберите запрос слева для поиска похожих вопросов</div>
+                                    <div class="question-title">Выберите запрос справа для поиска похожих вопросов</div>
                                     <div class="question-category">Начните ввод запроса клиента</div>
                                 </li>
                             </ul>
@@ -942,7 +942,7 @@
                                 <div class="classification-row">
                                     <div id="subCategory" class="classification-display">Не определено</div>
                                     <div class="classification-buttons">
-                                        <button class="choice-btn" id="subCategoryYes">Верно</button>
+                                        <button class="choice-btn active" id="subCategoryYes">Верно</button>
                                         <button class="choice-btn" id="subCategoryNo">Неверно</button>
                                     </div>
                                 </div>
